<resources>
    <string name="app_name">TikTokClone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_channel_name_label">Username</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_error">Please enter username!</string>
    <string name="divider_symbol">|</string>
    <string name="following_label">Following</string>
    <string name="for_you_label">For You</string>
    <string name="home_label">Home</string>
    <string name="discover_label">Discover</string>
    <string name="video_fetching_popup">Downloading videos…</string>
    <string name="subscribe_btn">SUBSCRIBE</string>
    <string name="unsubscribe_btn">UNSUBSCRIBE</string>
    <string name="discover_prompt">Discover new awesome videos!</string>
    <string name="search_error">Please enter a topic!</string>
    <string name="video_name_label">Name your video</string>
    <string name="choose_video_label">Choose your new video</string>
    <string name="upload_btn">UPLOAD</string>
    <string name="choose_hashtags_label">Choose your video\'s hashtags</string>
    <string name="name_error">Give your video a name!</string>
    <string name="no_video_chosen_error">Please choose a video to upload!</string>
</resources>